# andfn

./: .andfn_config.yaml  .buildinfo  .gitignore  README.md  about.html  apidocs.html  bounding.html  bounding.py  configuration.html  const_head.html  const_head.py  dfn.html  dfn.py  elements.html  example.html  example.py  examples_page.html  fracture.html  fracture.py  genindex.html  geometry.py  hpc.html  impermeable_objects.html  index.html  intersection.html  intersection.py  large_dfn.html  math_functions.py  math_geometry.html  modules.html  objects.inv  particle_tracking.html  py-modindex.html  pyproject.toml  release_notes.html  requirements.txt  sandbox.py  search.html  searchindex.js  template.html  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Build-sphinx-docs.yml  debug.yml  lint.yml  publish-to-testpypi.yml  publish_and_release.yml  python-publish.yml  test-and-lint.yml  test_lint.yml
AnDFN/: __init__.py  bounding.py  const_head.py  dfn.py  element.py  elements.py  fracture.py  geometry_functions.py  impermeable_object.py  intersection.py  math_functions.py  well.py
AnDFN/hpc/: hpc_bounding_circle.py  hpc_const_head_line.py  hpc_intersection.py
_modules/: index.html
_modules/andfn/: bounding.html  const_head.html  constants.html  dfn.html  element.html  fracture.html  geometry_functions.html  impermeable_object.html  intersection.html  math_functions.html  well.html
_modules/andfn/hpc/: hpc_bounding_circle.html  hpc_const_head_line.html  hpc_fracture.html  hpc_geometry_functions.html  hpc_intersection.html  hpc_math_functions.html  hpc_solve.html  hpc_well.html
_sources/: apidocs.rst  bounding.rst  configuration.rst  const_head.rst  dfn.rst  elements.rst  example.rst  fracture.rst  hpc.rst  impermeable_objects.rst  index.rst  intersection.rst  large_dfn.rst  modules.rst  particle_tracking.rst  release_notes.rst  template.rst  user_guide.rst
_static/: documentation_options.js
andfn/: __init__.py  bounding.py  const_head.py  constants.py  dfn.py  element.py  fracture.py  geometry_functions.py  impearmeable_objects.rst  impermeable_object.py  intersection.py  math_functions.py  pyproject.toml  regions.py  solver.py  structures.py  underground_structures.py  well.py
andfn/hpc/: __init__.py  hpc_bounding_circle.py  hpc_const_head_line.py  hpc_fracture.py  hpc_geometry_functions.py  hpc_imp_object.py  hpc_intersection.py  hpc_math_functions.py  hpc_solve.py  hpc_solve_cuda.py  hpc_well.py
docs/: 4fractures.rst  Makefile  about.rst  andfn.hpc.rst  andfn.rst  apidocs.rst  bounding.rst  conf.py  configuration.rst  const_head.rst  dfn.rst  element.rst  elements.rst  example.rst  examples.rst  examples_page.rst  fracture.rst  hpc.rst  impermeable_objects.rst  index.html  index.rst  intersection.rst  large_dfn.rst  make.bat  math_geometry.rst  particle_tracking.rst  release_notes.rst  user_guide.rst  well.rst
docs/_build/doctrees/: apidocs.doctree  dfn.doctree  environment.pickle  example.doctree  index.doctree  user_guide.doctree
docs/_build/doctrees/andfn.dfn/: andfn.dfn.DFN.doctree  andfn.dfn.Fracture.doctree  andfn.dfn.Intersection.doctree  andfn.dfn.Well.doctree
docs/_build/html/: .buildinfo  apidocs.html  dfn.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_guide.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/andfn/: bounding.html  const_head.html  dfn.html  element.html  fracture.html  geometry_functions.html  impermeable_object.html  intersection.html  math_functions.html  well.html
docs/_build/html/_sources/: apidocs.rst.txt  example.rst.txt  index.rst.txt
docs/_build/html/_sources/andfn.dfn/: andfn.dfn.DFN.rst.txt  andfn.dfn.Fracture.rst.txt  (+2 more)
docs/_build/html/andfn.dfn/: andfn.dfn.DFN.html  andfn.dfn.Fracture.html  andfn.dfn.Intersection.html  andfn.dfn.Well.html
docs/doctrees/: environment.pickle
docs/html/: example.html  py-modindex.html
docs/html/_modules/andfn/: math_functions.html
examples/: particle_tracking.py  template.py
(+10 files in other folders)
