[build-system]
requires = ["setuptools>64"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.10"
name = "andfn"
description = "An analytic element model for discrete fracture networks"
authors = [
    { name = "Erik A.L. Toller" }
]
maintainers = [
  { name = "Erik A.L. Toller", email = "erik@toller.se" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "hydrology", "groundwater", "model",
    "analytic element method", "discrete fracture network", "dfn"
]

dependencies = [
    "numpy",
    "pyvista~=0.44.2",
    "scipy",
    "numba",
    "h5py",
    "matplotlib"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.optional-dependencies]
all = ["pyyaml", "pandas", "matplotlib"]

[project.urls]
Homepage = "https://eriktoller.github.io/andfn"
Documentation = "https://eriktoller.github.io/andfn"
Repository = "https://github.com/eriktoller/andfn"
Issues = "https://github.com/eriktoller/andfn/issues"

[tool.setuptools.packages.find]
include = ["andfn", "andfn.hpc"]
